<resources>
    <string name="app_name">Music Doodle</string>
    <string name="reset_button_text">RESET</string>
    <string name="tempo_text">Tempo</string>
    <string name="msec_1000">x0.5</string>
    <string name="msec_750">x0.75</string>
    <string name="msec_500">x1.0</string>
    <string name="msec_250">x1.5</string>
    <string name="msec_100">x2.0</string>
    <string name="reset_all_button_text">RESET_ALL</string>
    <string name="change_instrument">Change\nInstrument\nHere</string>
    <string name="save">Save</string>
    <string name="play">Click The Icon To Play</string>
    <string name="developed_by">Developed by</string>
    <string name="manik_dhingra">Manik Dhingra</string>
    <string name="instru_content_desc">Instrument Icon</string>
    <string name="save_text_desc">Enter the name of the file that you wish to save</string>
    <string name="save_file">SAVE</string>
    <string name="discard_file">DISCARD</string>
    <string name="empty_view_desc_1">It sounds a bit quiet here...</string>
    <string name="empty_view_desc_2">Get started by creating a melody</string>
    <string name="recordings_str">Recordings</string>
    <string name="no_name">UNSAVED AUDIO FILE</string>

    <string name="info4a">And that\'s it !</string>
    <string name="info4b">Now go ahead and make some music of your own\n\nAnd don\'t forget the most important part...\n\n\nHave fun and Enjoy :)</string>
    <string name="info1a">Welcome to</string>
    <string name="info1b">Ever wished to be a good musician?\n\nNow\'s your chance !</string>
    <string name="info1c">Create your own melody\nSave and listen to it\nANYTIME, ANYWHERE</string>

</resources>
