<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_home_background"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/my_home_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/information"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_margin="16dp"
            android:src="@drawable/ic_info_icon" />

        <TextView
            android:id="@+id/app_name_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/home_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15sp"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="50sp" />

        <ImageView
            android:id="@+id/home_icon"
            android:layout_width="200sp"
            android:layout_height="150sp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_home_play_icon" />

        <TextView
            android:id="@+id/click_to_play_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/home_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15sp"
            android:fontFamily="casual"
            android:text="@string/play"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/developed_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/my_name"
            android:layout_centerHorizontal="true"
            android:text="@string/developed_by" />

        <TextView
            android:id="@+id/my_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10sp"
            android:fontFamily="casual"
            android:text="@string/manik_dhingra"
            android:textAppearance="?android:textAppearanceMedium" />

    </RelativeLayout>

</RelativeLayout>