<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/edittext_bg"
    android:layout_margin="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info1a"
            android:textSize="40sp"
            android:layout_gravity="center"
            android:textColor="@color/info_head"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Music Doodle"
            android:textSize="40sp"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:fontFamily="casual"
            android:gravity="center"
            android:layout_margin="16dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/info1b"
            android:gravity="center"
            android:textColor="#C62828"
            android:fontFamily="sans-serif-condensed"
            android:textSize="25sp"
            android:layout_margin="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/info1c"
            android:gravity="center"
            android:textColor="@color/info_detail"
            android:fontFamily="sans-serif-condensed"
            android:layout_margin="16dp"
            android:textSize="25sp"/>

    </LinearLayout>

</RelativeLayout>