<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_home_background"
    android:padding="16dp">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <TextView
        android:id="@+id/save_info_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_text_desc"
        android:gravity="center"
        android:textAlignment="gravity"
        android:textAppearance="?android:textAppearanceMedium"
        android:fontFamily="monospace"
        android:textColor="@android:color/white"
        android:layout_weight="2"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:textSize="25sp"
        android:layout_below="@+id/save_info_text_view"
        android:layout_marginTop="30sp"
        android:id="@+id/save_file_by_name"
        android:textColor="@android:color/white"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/edittext_bg"
        android:hint="File Name"
        android:textColorHint="@android:color/darker_gray"
        android:fontFamily="monospace"
        android:inputType="textCapWords"
        android:maxLines="1"
        android:maxLength="15"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.2"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/save_file_button"
            android:text="@string/save_file"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="?android:textAppearanceLarge"
            android:background="@drawable/button_background"
            android:layout_margin="10sp"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/discard_file_button"
            android:text="@string/discard_file"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="?android:textAppearanceLarge"
            android:background="@drawable/button_background"
            android:layout_margin="10sp"/>

    </LinearLayout>

</LinearLayout>